<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_acknowledgements">Acknowledgements</string>
    <string name="about_rate_button">Rate in Play Store!</string>
    <string name="about_text">"Game created by Petter Säterskog.
Challenges designed by Alast, bwisialo, Nayus and Petter.
In case you get stuck:"</string>
    <string name="about_version_text">Version</string>
    <string name="accept">Accept</string>
    <string name="acknowledgement">"Many thanks to Alast, bwisialo, Nayus and Eric Säterskog who designed some of the challenges and gave invaluable feedback. 

Huge thanks to all beta testers and Cell Lab Forum contributors! 

All sound and music created by Danilov Sound,"<a href="http://danilovsound.com/"> danilovsound.com</a></string>
    <string name="advanced_settings_cell_count">Maximum cell count:</string>
    <string name="advanced_settings_info">These settings are for advanced use. Setting them inappropriately might make Cell Lab crash/run extremely slowly.</string>
    <string name="advanced_settings_radius">Petri dish diameter [mm]:</string>
    <string name="advances_settings_food_count">Maximum food count:</string>
    <string name="app_name">Cell Lab</string>
    <string name="button_more">…</string>
    <string name="button_refresh">Refresh</string>
    <string name="cell_info_S_production">" production: %.1f "</string>
    <string name="cell_info_active_mode">"Active mode: "</string>
    <string name="cell_info_age">Age: %.2f h</string>
    <string name="cell_info_density">"Density: "</string>
    <string name="cell_info_diameter">Diameter: %.1f μm</string>
    <string name="cell_info_injury">Injury: %.0f%%</string>
    <string name="cell_info_lift">Lift: %.2f</string>
    <string name="cell_info_lipids">Lipids (mass equiv.): %.2f ng&lt;br></string>
    <string name="cell_info_mass">Mass: %.2f ng</string>
    <string name="cell_info_mirrored">"Mirrored: "</string>
    <string name="cell_info_mutations">"Mutations: "</string>
    <string name="cell_info_nitro">Nitrogen reserve: %.0f%%</string>
    <string name="cell_info_select">Select cell…</string>
    <string name="cell_info_speed">&lt;br>Speed: %.0f μm/h</string>
    <string name="cell_info_swim_force">Swim force: %.2f&amp;times;10&lt;sup>&lt;small>-21&lt;/small>&lt;/sup> N</string>
    <string name="cell_info_tag">"Tag: "</string>
    <string name="cell_info_tag_challenge">Challenge cell</string>
    <string name="cell_info_tag_contaminate">Contamination cell</string>
    <string name="cell_info_tag_hybrid">Hybrid cell</string>
    <string name="cell_info_tag_infected_challenge">Infected challenge cell</string>
    <string name="cell_info_tag_infected_contaminate">Infected contamination cell</string>
    <string name="cell_info_tag_infected_user">Infected user cell</string>
    <string name="cell_info_tag_user">User cell</string>
    <string name="cell_info_telomeres">"Telomeres: "</string>
    <string name="cell_info_toxins">Toxins: %.2f</string>
    <string name="cell_info_type">"Type: "</string>
    <string name="chalenges_finish_first_1">Finish Challenge</string>
    <string name="challenges_challenge_not_completed">Challenge not completed.</string>
    <string name="challenges_finish_first_2">first.</string>
    <string name="challenges_unlocks">" Unlocks gene"</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="default_locale">en</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_discard">Discard</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_reload">Reload</string>
    <string name="dialog_button_save">Save</string>
    <string name="dialog_button_start">Start</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_discard_text">Leaving experimental species in the open is against lab policy!</string>
    <string name="dialog_discard_title">Discard current substrate?</string>
    <string name="dialog_reload_title">Reload current substrate</string>
    <string name="dialog_rename_genome_title">Rename your genome</string>
    <string name="dialog_sterilize_text">Killing too many cells might result in another chat with the ethics committee…</string>
    <string name="dialog_sterilize_title">Sterilize current substrate?</string>
    <string name="dialog_text_save_genome">Saving your genome lets you reuse it in another challenge or send it to a friend.</string>
    <string name="dialog_titlte_save_genome">Name your genome</string>
    <string name="difficulty_level_0">Difficulty: Undergrad</string>
    <string name="difficulty_level_1">Difficulty: Phd</string>
    <string name="difficulty_level_2">Difficulty: Mad scientist</string>
    <string name="difficulty_level_3">Difficulty: Superhuman AI</string>
    <string name="donate_appeal">Cell Lab is provided as a completely free app. There are no payments for features and no ads. If you would like to show your appreciation to the developer, consider donating an amount of your choice below. A combination of buttons can be used.</string>
    <string name="donate_reminder">If you would like to make a donation to the developer of this game you can do so in the \"About\" page of the main menu.</string>
    <string name="donate_reminder_title">Donate?</string>
    <string name="donations_made">Donations made:</string>
    <string name="genome_editor_adhesin_stiffnes">Adhesin stiffness:</string>
    <string name="genome_editor_blue">Blue color:</string>
    <string name="genome_editor_button_load">Load</string>
    <string name="genome_editor_button_save">Save</string>
    <string name="genome_editor_cell_type">Cell type:</string>
    <string name="genome_editor_child_1">Child 1:</string>
    <string name="genome_editor_child_1_angle">Child 1 angle:</string>
    <string name="genome_editor_child_2">Child 2:</string>
    <string name="genome_editor_child_2_angle">Child 2 angle:</string>
    <string name="genome_editor_edit_mode">Edit mode:</string>
    <string name="genome_editor_green">Green color:</string>
    <string name="genome_editor_is_initial">Initial:</string>
    <string name="genome_editor_keep_adhesin">Keep adhesin:</string>
    <string name="genome_editor_make_adhesin">Make adhesin:</string>
    <string name="genome_editor_mirror">Mirror:</string>
    <string name="genome_editor_mode">Mode:</string>
    <string name="genome_editor_nutrient_priority">Nutrient priority:</string>
    <string name="genome_editor_red">Red color:</string>
    <string name="genome_editor_snap_angles">Snap values:</string>
    <string name="genome_editor_split_angle">Split angle:</string>
    <string name="genome_editor_split_mass">Split mass:</string>
    <string name="genome_editor_split_ratio">Split ratio:</string>
    <string name="genome_editor_stay_alive">Prioritize:</string>
    <string name="signal_val_dialog_a">a:</string>
    <string name="signal_val_dialog_b">b:</string>
    <string name="signal_val_dialog_c">c:</string>
    <string name="signal_val_dialog_fixed_value">Fixed value:</string>
    <string name="signal_val_dialog_substance">Input:</string>
    <string name="signal_val_dialog_use_signal">Use cell state:</string>
    <string name="signal_val_dialog_value_equals">Value =</string>
    <string name="val_dialog_signal_substance_dependence">Cell state dependence</string>
</resources>