<?xml version="1.0" encoding="utf-8"?>
<ScrollView n1:layout_width="fill_parent" n1:layout_height="fill_parent" n1:fillViewport="true"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <LinearLayout n1:gravity="center" n1:orientation="vertical" n1:layout_width="fill_parent" n1:layout_height="fill_parent">
        <TextView n1:textSize="16.0sp" n1:id="@id/text_about_name" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginLeft="20.0dip" n1:layout_marginTop="20.0dip" n1:layout_marginRight="20.0dip" n1:layout_marginBottom="0.0dip" n1:text="" />
        <TextView n1:id="@id/text_about_text" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginLeft="20.0dip" n1:layout_marginTop="0.0dip" n1:layout_marginRight="20.0dip" n1:layout_marginBottom="0.0dip" n1:text="@string/about_text" />
        <LinearLayout n1:gravity="center" n1:orientation="horizontal" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
            <Space n1:layout_width="0.0dip" n1:layout_height="1.0dip" n1:layout_weight="1.0" />
            <TextView n1:textSize="16.0sp" n1:id="@id/text_stuck_left" n1:layout_width="wrap_content" n1:layout_height="wrap_content" />
            <Space n1:layout_width="0.0dip" n1:layout_height="1.0dip" n1:layout_weight="1.0" />
            <TextView n1:textSize="16.0sp" n1:id="@id/text_stuck_middle" n1:layout_width="wrap_content" n1:layout_height="wrap_content" />
            <Space n1:layout_width="0.0dip" n1:layout_height="1.0dip" n1:layout_weight="1.0" />
            <TextView n1:textSize="16.0sp" n1:id="@id/text_stuck_right" n1:layout_width="wrap_content" n1:layout_height="wrap_content" />
            <Space n1:layout_width="0.0dip" n1:layout_height="1.0dip" n1:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout n1:orientation="horizontal" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
            <Button n1:textSize="16.0sp" n1:id="@id/button_rate" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginLeft="10.0dip" n1:layout_marginTop="30.0dip" n1:layout_marginRight="10.0dip" n1:layout_marginBottom="20.0dip" n1:text="@string/about_rate_button" n1:layout_weight="1.0" />
            <Button n1:textSize="16.0sp" n1:id="@id/button_acknowledgements" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginLeft="10.0dip" n1:layout_marginTop="30.0dip" n1:layout_marginRight="10.0dip" n1:layout_marginBottom="20.0dip" n1:text="@string/about_acknowledgements" n1:layout_weight="1.0" />
        </LinearLayout>
        <Space n1:layout_width="1.0dip" n1:layout_height="0.0dip" n1:layout_weight="1.0" />
        <LinearLayout n1:orientation="vertical" n1:background="@drawable/rounded_rect_shape" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_margin="12.0dip">
            <RelativeLayout n1:layout_width="fill_parent" n1:layout_height="wrap_content">
                <TextView n1:textSize="20.0sp" n1:id="@id/text_donate_title" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginLeft="6.0dip" n1:layout_marginTop="6.0dip" n1:layout_marginRight="6.0dip" n1:layout_marginBottom="6.0dip" n1:text="Donate" n1:layout_alignParentLeft="true" />
                <Button n1:id="@id/button_refresh_donation" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_margin="6.0dip" n1:text="@string/button_refresh" n1:layout_alignBaseline="@id/text_donate_title" n1:layout_alignParentRight="true" />
            </RelativeLayout>
            <TextView n1:textSize="14.0sp" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginLeft="6.0dip" n1:layout_marginTop="6.0dip" n1:layout_marginRight="6.0dip" n1:layout_marginBottom="0.0dip" n1:text="@string/donate_appeal" />
            <LinearLayout n1:gravity="center" n1:orientation="horizontal" n1:id="@id/layout_donate" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_margin="12.0dip" />
            <TextView n1:textSize="14.0sp" n1:id="@id/text_bought" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginLeft="6.0dip" n1:layout_marginTop="6.0dip" n1:layout_marginRight="6.0dip" n1:layout_marginBottom="6.0dip" n1:text="" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>